Fix the z-index for blocks using the dotted overlay. It was covering up the form, and links.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2058,7 +2058,7 @@ a {
   position: absolute;
   right: 0;
   top: 0;
-  z-index: 0; }
+  z-index: -1; }
 
 .uppercase-link {
   color: #58585b;
