--- a/assets/sass/config/_05.extends.scss
+++ b/assets/sass/config/_05.extends.scss
@@ -8,7 +8,7 @@
   position: absolute;
   right: 0;
   top: 0;
-  z-index: 0;
+  z-index: -1;
 }
 
 // Uppercase links with right pointed carets on the end
